--- a/templates/identifier.html
+++ b/templates/identifier.html
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+<!-- Sources the identifier from an external site. NOTE, THIS MAY BE POOR SECURITY IF THE EXTERNAL SITE GETS COMPROMISED, THEREFORE THIS IS JUST A NOVELTY PAGE, PLEASE IGNORE -->
+
 <iframe src="https://www.yeschat.ai/i/gpts-2OToO8aDZZ-Fish-Identifier-GPT" class="fish_ai_insert"></iframe>
 
 {% endblock %}
