--- a/templates/error.html
+++ b/templates/error.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Error</h1>
-    <p>{{ message }}</p>
+    <p>{{ message }}</p> <!-- Display the error message -->
     <a href="/">Go back to the homepage</a>
 </body>
 </html>
