--- a/templates/fish_dex.html
+++ b/templates/fish_dex.html
@@ -8,10 +8,10 @@
 
     <h3>--- Caught Fish ---</h3>
 
-    <div class="found_fish">
-        {% for fish in caught_list %}
+    <div class="found_fish"> <!-- This is where all the cards for fish that have been caught go -->
+        {% for fish in caught_list %} <!-- for each fish that has been uploaded by the user -->
             <div class="fish_card" onclick="openModal('{{ fish[1] }}', '{{ fish[0]}}')">
-                <img src="{{ fish[3] }}" alt="/static/images/blank_fish_image.jpg">
+                <img src="{{ fish[3] }}" alt="/static/images/blank_fish_image.jpg"> <!-- Get the image from the user, if not use a blank image -->
                 <h3>{{ fish[1] }}</h3>
             </div>
         {% endfor %}
@@ -19,7 +19,7 @@
 
     <h3>--- Yet To Catch ---</h3>
 
-    <div class="unfound_fish">
+    <div class="unfound_fish"> <!-- This is where all the cards for fish that haven't been caught yet go, filled with blank images -->
         {% for fish in uncaught_list %}
             <div class="fish_card" onclick="openModal('{{ fish }}', '')">
                 <img src="/static/images/blank_fish_image.jpg" alt="no img">
@@ -28,13 +28,13 @@
         {% endfor %}    
     </div>
 
-    <!-- Modal Form -->
+    <!-- Modal Form for uploading new fish images -->
     <div id="uploadModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <h2>Upload Fish Image</h2>
             <form action="{{ url_for('upload_fish_image') }}" method="post" enctype="multipart/form-data">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"> <!-- CSRF authentication -->
                 <input type="hidden" id="fish_name" name="fish_name">
                 <input type="hidden" id="fish_id" name="fish_id">
                 <input type="file" name="image" accept="image/*" required>
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    <!-- javascript for opening and closing the modal form -->
     <script>
         function openModal(fishName, fishId) {
             document.getElementById('fish_name').value = fishName;
