--- a/templates/post_management.html
+++ b/templates/post_management.html
@@ -3,8 +3,10 @@
 {% block body %}
 
 <h1>Manage Posts</h1>
+<!-- set up table to display post data -->
 <table border="1">
     <thead>
+        <!-- set up titles for columns -->
         <tr>
             <th>Post ID</th>
             <th>User ID</th>
@@ -14,13 +16,13 @@
         </tr>
     </thead>
     <tbody>
-        {% for post in post_data %}
+        {% for post in post_data %} <!-- loop through post data and display in table -->
             <tr>
                 <td data-label="Post ID">{{ post[0] }}</td>
                 <td data-label="User ID">{{ post[1] }}</td>
                 <td data-label="Image Source">{{ post[2] }}</td>
                 <td data-label="Caption">{{ post[3] }}</td>
-                <td data-label="Actions">
+                <td data-label="Actions"> <!-- set up edit and delete links to open modals and pass in necessary info -->
                     <a href="javascript:void(0);" onclick="openEditModal('{{ post[0] }}', '{{ post[1] }}', '{{ post[2] }}', '{{ post[3] }}')">Edit</a> |
                     <a href="javascript:void(0);" onclick="openDeleteModal('{{ post[0] }}')">Delete</a>
                 </td>
@@ -34,7 +36,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeEditModal()">&times;</span>
         <h2>Edit Post</h2>
-        <form id="editPostForm" action="{{ url_for('edit_post') }}" method="post">
+        <form id="editPostForm" action="{{ url_for('edit_post') }}" method="post"> <!-- set up form to edit post data -->
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="hidden" id="edit_post_id" name="post_id">
             <label for="edit_user_id">User ID:</label>
@@ -63,6 +65,7 @@
 </div>
 
 <script>
+    // js to open and close modals
     function openEditModal(postId, userId, imageSrc, caption) {
         document.getElementById('edit_post_id').value = postId;
         document.getElementById('edit_user_id').value = userId;
