small post styling change

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                         {% endif %}
                         <h4>{{ post[2] }}</h4>
                     </div>
-                    <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
+                    <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image" class="post_image">
                     <div class="post_footer">
                         <p>{{ post[1] }}</p>
                     </div>
