--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
                     {% endif %}
                     <h4>{{ post[3] }}</h4>
                 </div>
-                <img src="{{ url_for('static', filename=post[1]) }}" alt="Post Image">
+                <img src="{{ url_for('static', filename=post[1]) }}" alt="Post Image" class="post_image">
                 <div class="post_footer">
                     <p>{{ post[2] }}</p>
                 </div>
