--- a/static/style.css
+++ b/static/style.css
@@ -181,28 +181,27 @@ body {
 /* Style the posts */
 .posts {
     width: 100%;
-    max-width: 750px; /* Limit the width of the posts */
+    max-width: 600px; /* Limit the width of the posts */
 }
 
 .post { /* Styling for each post */
     position: relative; /* Ensure the content is positioned relative to the post */
     background-color: #fff;
     padding: 0;
-    border-radius: 10px; /* Adds softer edges for UI */
+    border-radius: 5px; /* Adds softer edges for UI */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow, UI improvement */
     margin-top: 20px;
     text-align: center;
 }
 
-.post img {
-    max-width: 100%;
-    max-height: 300px; /* Limit the height of the image, image will scale to this height */
+.post_image {
+    width: 100%;
+    height: auto;
+    max-height: 600px; /* Limit the height of the image just incase excessively tall image uploaded */
     height: auto;
     object-fit: contain; /* Ensure the image fits within the area */
-    margin-top: 5px;
+    margin-bottom: -3.5px;
 }
-
-
 
 .posts h2 { /* Styling for the thing that says No Posts Yet  */
     text-align: center;
@@ -222,10 +221,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: left;
-    background-color: #EFFBFE;
-    border-radius: 10px 10px 0 0;
+    /* background-color: #EFFBFE; */
+    border-radius: 5px 5px 0 0;
     padding-top: 10px;
     padding-bottom: 5px;
+    border: solid 1px lightgrey;
 }
 
 .post_footer { /* Styling for the post footer that contains the caption */
@@ -233,11 +233,12 @@ body {
     flex-direction: column; /* Change to column to allow text to wrap */
     align-items: flex-start; /* Align items to the start */
     justify-content: left;
-    background-color: #EFFBFE;
-    border-radius: 0 0 10px 10px;
+    /* background-color: #EFFBFE; */
+    border-radius: 0 0 5px 5px;
     padding: 10px;
     width: 100%; /* Ensure the footer takes the full width */
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    border: solid 1px lightgrey;
 }
 
 .post_footer p { /* Styling for the caption */
@@ -257,6 +258,7 @@ body {
     border-radius: 50%;
     margin-right: 10px;
     margin-left: 10px;
+    object-fit: contain;
 }
 
 /* CSS STYLING FOR THE FISH IDENTIFIER AI */
@@ -415,7 +417,7 @@ body {
     left: 0;
     width: 100%; /* Cover the entire post */
     height: 100%;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
